--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,9 @@ body {
 
 #left_bar {
     width:20%;
+    height: 100%;
     border-left: 5px solid black;
+    overflow-y: hidden;
 }
 
 #right_bar {
@@ -138,7 +140,8 @@ body {
 }
 
 #words-menu {
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
+    overflow-y: hidden;
     height: 100%;
 }
 
@@ -159,38 +162,44 @@ body {
     user-select: none;
 }
 
-#delete-word-btn > p:hover {
+.delete-word-btn > p:hover {
     cursor: pointer;
 }
 
-#delete-word-btn > p:active {
+
+.delete-word-btn > p:active, #options_bar > div:active {
+    cursor: pointer;
     background-color: black;
     color:white;
 }
 
+#hints-list {
+    display: flex;
+}
 
-
-#words-list, #hint-menu {
-    /* overflow-y: scroll;
-    height: 100%; */
+#words-list, #hints-list {
+    overflow-y: scroll;
+    /* height: 100%; */
     display: flex;
     flex-wrap: wrap;
     user-select: none;
 }
 
-#words-list > p, #hint-menu > p {
+#words-list > p, #hints-list > p {
     text-align: center;
     margin:10px;
+    padding: 5px;
     font-size: 20px;
 }
 
-#words-list > p:hover {
+#words-list > p:hover:not(.no-solution), #hints-list > p:hover:not(.no-solution) {
     cursor: pointer;
 }
 
 .selected-word {
 
     /* color:var(--strands-blue); */
+    border-radius: 25px;
     padding:5px;
     background-color: var(--strands-blue);
 
@@ -243,14 +252,14 @@ body {
     background-color: rgb(216, 255, 124);
 }
 
-#solutions-menu {
+#solutions-list {
     text-align: center;
     font-size: 20px;
     overflow-y: scroll;
-    height: 100%;
+    /* height: 100%; */
 }
 
-#solutions-menu > div {
+#solutions-list > div {
     border:5px solid black;
     padding:10px;
     margin:10px;
@@ -258,12 +267,17 @@ body {
     user-select: none;
 }
 
-#solutions-menu > div:hover {
+#solutions-list > div:hover {
     cursor: pointer;
 }
 
 #solutions-menu > div.selected-solution {
     border:5px solid var(--strands-blue);
+}
+
+#solutions-menu {
+    height: 100%;
+    overflow-y: hidden;
 }
 
 .hover:hover {
@@ -305,4 +319,10 @@ body {
 svg > line {
     stroke-width: 10px;
     stroke:var(--strands-blue);
+}
+
+#list-filter {
+    display: block;
+    width: calc( 100% - 30px );
+    margin:15px;
 }
